# uva-bigdata-project

./: .dockerignore  Dockerfile  README.md  experiment_1.py  experiment_1_make_moons.py  experiment_2.py  experiment_2_flight_on_time.py  plots.ipynb  pyproject.toml  utils.py
experiment_results/: 1_offline_results.txt  1_online_results.txt  2_offline_results.txt  2_online_results.txt
