[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Manuel Knott <Manuel.Knott@cloudflight.io>"]

[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "^0.22.2"
pandas = "^1.0.1"
numpy = "^1.18.1"
matplotlib = "^3.2.0"
jupyterlab = "^2.0.1"
mondrianforest = "^0.0.2"
psycopg2 = "^2.8.4"
sqlalchemy = "^1.3.15"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
